@@ -953,10 +953,10 @@ constants.pages = {
       },
     },
     { type = "list_box", source = "research_ingredients_per_unit" },
-    { type = "list_box", source = "unlocks_equipment" },
-    { type = "list_box", source = "unlocks_fluids" },
-    { type = "list_box", source = "unlocks_items" },
-    { type = "list_box", source = "unlocks_machines" },
+    { type = "list_box", source = "unlocks_equipment", default_state = "hidden" },
+    { type = "list_box", source = "unlocks_fluids", default_state = "hidden" },
+    { type = "list_box", source = "unlocks_items", default_state = "hidden" },
+    { type = "list_box", source = "unlocks_machines", default_state = "hidden" },
     { type = "list_box", source = "unlocks_recipes" },
     { type = "list_box", source = "prerequisites" },
     { type = "list_box", source = "prerequisite_of" },
